[gd_scene format=3 uid="uid://0aoupmo7ao1v"]

[ext_resource type="Script" uid="uid://pb72nqjy6jp" path="res://scripts/player/player.gd" id="1_dqkch"]
[ext_resource type="Texture2D" uid="uid://dv0w6qf1ag0fu" path="res://FREE_Adventurer 2D Pixel Art/Sprites/ATTACK 1/attack1_right.png" id="2_f1ej7"]
[ext_resource type="Texture2D" uid="uid://dr8wvoosmvn32" path="res://FREE_Adventurer 2D Pixel Art/Sprites/ATTACK 1/attack1_down.png" id="2_qfm1y"]
[ext_resource type="Texture2D" uid="uid://b032dg8hestd4" path="res://FREE_Adventurer 2D Pixel Art/Sprites/IDLE/idle_down.png" id="3_d2wvv"]
[ext_resource type="Texture2D" uid="uid://jb0f8awr4pa" path="res://FREE_Adventurer 2D Pixel Art/Sprites/ATTACK 1/attack1_left.png" id="3_fulsm"]
[ext_resource type="Texture2D" uid="uid://crrij5fjwrnfw" path="res://FREE_Adventurer 2D Pixel Art/Sprites/IDLE/idle_right.png" id="3_smehm"]
[ext_resource type="Texture2D" uid="uid://c2225u62d4vam" path="res://FREE_Adventurer 2D Pixel Art/Sprites/IDLE/idle_left.png" id="4_3v2ag"]
[ext_resource type="Texture2D" uid="uid://bwv8sr568x1jp" path="res://FREE_Adventurer 2D Pixel Art/Sprites/ATTACK 1/attack1_up.png" id="5_4r5pv"]
[ext_resource type="PackedScene" uid="uid://ci8g2c012jtrf" path="res://scenes/state_machine.tscn" id="5_qlg0r"]
[ext_resource type="Texture2D" uid="uid://cowkt60a8imk5" path="res://FREE_Adventurer 2D Pixel Art/Sprites/IDLE/idle_up.png" id="6_jej6c"]
[ext_resource type="Script" uid="uid://c44qwaqnl5r4r" path="res://scripts/player/idle.gd" id="6_tuyoq"]
[ext_resource type="Texture2D" uid="uid://b5t0kblogb66c" path="res://FREE_Adventurer 2D Pixel Art/Sprites/RUN/run_down.png" id="7_f1ej7"]
[ext_resource type="Script" uid="uid://brlg867v73pdt" path="res://scripts/player/move.gd" id="7_fjrip"]
[ext_resource type="Texture2D" uid="uid://hw8f0fos77q3" path="res://FREE_Adventurer 2D Pixel Art/Sprites/RUN/run_left.png" id="8_oprun"]
[ext_resource type="Script" uid="uid://uxvco6bgwynx" path="res://scripts/player/attack.gd" id="8_smehm"]
[ext_resource type="Texture2D" uid="uid://slhg7lwqpnnb" path="res://FREE_Adventurer 2D Pixel Art/Sprites/RUN/run_right.png" id="9_a8ls1"]
[ext_resource type="Texture2D" uid="uid://bloo55msbudj" path="res://FREE_Adventurer 2D Pixel Art/Sprites/RUN/run_up.png" id="10_qfm1y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ry8ed"]
atlas = ExtResource("2_qfm1y")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("2_qfm1y")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_au8ao"]
atlas = ExtResource("2_qfm1y")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5j5w"]
atlas = ExtResource("2_qfm1y")
region = Rect2(288, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbf1i"]
atlas = ExtResource("2_qfm1y")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vfid"]
atlas = ExtResource("2_qfm1y")
region = Rect2(480, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljgr3"]
atlas = ExtResource("2_qfm1y")
region = Rect2(576, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fr8ja"]
atlas = ExtResource("2_qfm1y")
region = Rect2(672, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvmy4"]
atlas = ExtResource("3_fulsm")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcu33"]
atlas = ExtResource("3_fulsm")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmsq4"]
atlas = ExtResource("3_fulsm")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vs2b"]
atlas = ExtResource("3_fulsm")
region = Rect2(288, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7i4v"]
atlas = ExtResource("3_fulsm")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5l0c"]
atlas = ExtResource("3_fulsm")
region = Rect2(480, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a33p"]
atlas = ExtResource("3_fulsm")
region = Rect2(576, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_reqs7"]
atlas = ExtResource("3_fulsm")
region = Rect2(672, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("2_f1ej7")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("2_f1ej7")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("2_f1ej7")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("2_f1ej7")
region = Rect2(288, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("2_f1ej7")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("2_f1ej7")
region = Rect2(480, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("2_f1ej7")
region = Rect2(576, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("2_f1ej7")
region = Rect2(672, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yjfb"]
atlas = ExtResource("5_4r5pv")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnnjp"]
atlas = ExtResource("5_4r5pv")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqna8"]
atlas = ExtResource("5_4r5pv")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7gmo"]
atlas = ExtResource("5_4r5pv")
region = Rect2(288, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kft7l"]
atlas = ExtResource("5_4r5pv")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2s4os"]
atlas = ExtResource("5_4r5pv")
region = Rect2(480, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2em0j"]
atlas = ExtResource("5_4r5pv")
region = Rect2(576, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe2k6"]
atlas = ExtResource("5_4r5pv")
region = Rect2(672, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("3_d2wvv")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8cc"]
atlas = ExtResource("3_d2wvv")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_487ah"]
atlas = ExtResource("3_d2wvv")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ol"]
atlas = ExtResource("3_d2wvv")
region = Rect2(288, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj30b"]
atlas = ExtResource("3_d2wvv")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc3p3"]
atlas = ExtResource("3_d2wvv")
region = Rect2(480, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hax0n"]
atlas = ExtResource("3_d2wvv")
region = Rect2(576, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4otl"]
atlas = ExtResource("3_d2wvv")
region = Rect2(672, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2b1d"]
atlas = ExtResource("4_3v2ag")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs1tg"]
atlas = ExtResource("4_3v2ag")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dvfe"]
atlas = ExtResource("4_3v2ag")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_giy8y"]
atlas = ExtResource("4_3v2ag")
region = Rect2(288, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdfoy"]
atlas = ExtResource("4_3v2ag")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhpqf"]
atlas = ExtResource("4_3v2ag")
region = Rect2(480, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5jhy"]
atlas = ExtResource("4_3v2ag")
region = Rect2(576, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_holxr"]
atlas = ExtResource("4_3v2ag")
region = Rect2(672, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("3_smehm")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("3_smehm")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("3_smehm")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("3_smehm")
region = Rect2(288, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("3_smehm")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("3_smehm")
region = Rect2(480, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("3_smehm")
region = Rect2(576, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("3_smehm")
region = Rect2(672, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx1m4"]
atlas = ExtResource("6_jej6c")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gjji"]
atlas = ExtResource("6_jej6c")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2ulf"]
atlas = ExtResource("6_jej6c")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e8lb"]
atlas = ExtResource("6_jej6c")
region = Rect2(288, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gdjj"]
atlas = ExtResource("6_jej6c")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc3ue"]
atlas = ExtResource("6_jej6c")
region = Rect2(480, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxlsd"]
atlas = ExtResource("6_jej6c")
region = Rect2(576, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha2mi"]
atlas = ExtResource("6_jej6c")
region = Rect2(672, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_apa73"]
atlas = ExtResource("7_f1ej7")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_74r1k"]
atlas = ExtResource("7_f1ej7")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8svfe"]
atlas = ExtResource("7_f1ej7")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a3c5"]
atlas = ExtResource("7_f1ej7")
region = Rect2(288, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_42b1b"]
atlas = ExtResource("7_f1ej7")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7ic4"]
atlas = ExtResource("7_f1ej7")
region = Rect2(480, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_au7lq"]
atlas = ExtResource("7_f1ej7")
region = Rect2(576, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nubpm"]
atlas = ExtResource("7_f1ej7")
region = Rect2(672, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua5cf"]
atlas = ExtResource("8_oprun")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_51ujp"]
atlas = ExtResource("8_oprun")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk41t"]
atlas = ExtResource("8_oprun")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuw3a"]
atlas = ExtResource("8_oprun")
region = Rect2(288, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8txt3"]
atlas = ExtResource("8_oprun")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w11d"]
atlas = ExtResource("8_oprun")
region = Rect2(480, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_770dr"]
atlas = ExtResource("8_oprun")
region = Rect2(576, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f1cb"]
atlas = ExtResource("8_oprun")
region = Rect2(672, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdulj"]
atlas = ExtResource("9_a8ls1")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vau08"]
atlas = ExtResource("9_a8ls1")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsb7e"]
atlas = ExtResource("9_a8ls1")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjsmb"]
atlas = ExtResource("9_a8ls1")
region = Rect2(288, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwp2n"]
atlas = ExtResource("9_a8ls1")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yhus"]
atlas = ExtResource("9_a8ls1")
region = Rect2(480, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlll7"]
atlas = ExtResource("9_a8ls1")
region = Rect2(576, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk6i7"]
atlas = ExtResource("9_a8ls1")
region = Rect2(672, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6c3st"]
atlas = ExtResource("10_qfm1y")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1da1t"]
atlas = ExtResource("10_qfm1y")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_p21yu"]
atlas = ExtResource("10_qfm1y")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_irpag"]
atlas = ExtResource("10_qfm1y")
region = Rect2(288, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpsgo"]
atlas = ExtResource("10_qfm1y")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jx8is"]
atlas = ExtResource("10_qfm1y")
region = Rect2(480, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vx63k"]
atlas = ExtResource("10_qfm1y")
region = Rect2(576, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lw0jh"]
atlas = ExtResource("10_qfm1y")
region = Rect2(672, 0, 96, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_y4r1p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry8ed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au8ao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5j5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbf1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vfid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljgr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fr8ja")
}],
"loop": false,
"name": &"attack_down",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvmy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcu33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmsq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vs2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7i4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5l0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a33p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_reqs7")
}],
"loop": false,
"name": &"attack_left",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}],
"loop": false,
"name": &"attack_right",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yjfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnnjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqna8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7gmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kft7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2s4os")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2em0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qe2k6")
}],
"loop": false,
"name": &"attack_up",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_487ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj30b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc3p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hax0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4otl")
}],
"loop": true,
"name": &"idle_down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2b1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs1tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dvfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giy8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdfoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhpqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5jhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_holxr")
}],
"loop": true,
"name": &"idle_left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfne")
}],
"loop": true,
"name": &"idle_right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx1m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gjji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2ulf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e8lb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gdjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc3ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxlsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha2mi")
}],
"loop": true,
"name": &"idle_up",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_apa73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74r1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8svfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a3c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42b1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7ic4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au7lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nubpm")
}],
"loop": false,
"name": &"move_down",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua5cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51ujp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk41t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuw3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8txt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w11d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_770dr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8f1cb")
}],
"loop": false,
"name": &"move_left",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdulj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vau08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsb7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjsmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwp2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yhus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlll7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk6i7")
}],
"loop": false,
"name": &"move_right",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6c3st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1da1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p21yu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irpag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpsgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jx8is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vx63k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lw0jh")
}],
"loop": false,
"name": &"move_up",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qfm1y"]
size = Vector2(12, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fulsm"]
size = Vector2(19, 27)

[node name="player" type="CharacterBody2D" unique_id=636600611 groups=["player"]]
script = ExtResource("1_dqkch")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=168854869]
position = Vector2(-3, -7)
sprite_frames = SubResource("SpriteFrames_y4r1p")
animation = &"attack_up"
autoplay = "idle_right"
frame = 7
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1930384499]
position = Vector2(-3, 0)
shape = SubResource("RectangleShape2D_qfm1y")

[node name="state_machine" parent="." unique_id=1359298261 node_paths=PackedStringArray("starting_state") instance=ExtResource("5_qlg0r")]
starting_state = NodePath("idle")

[node name="idle" type="Node" parent="state_machine" unique_id=1193597156 node_paths=PackedStringArray("move_state", "attack_state")]
script = ExtResource("6_tuyoq")
move_state = NodePath("../move")
attack_state = NodePath("../attack")

[node name="move" type="Node" parent="state_machine" unique_id=568289532 node_paths=PackedStringArray("idle_state", "attack_state")]
script = ExtResource("7_fjrip")
idle_state = NodePath("../idle")
attack_state = NodePath("../attack")

[node name="attack" type="Node" parent="state_machine" unique_id=70002031 node_paths=PackedStringArray("move_state", "idle_state")]
script = ExtResource("8_smehm")
move_state = NodePath("../move")
idle_state = NodePath("../idle")

[node name="hp" type="Area2D" parent="." unique_id=1549899719]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hp" unique_id=1801037496]
position = Vector2(-5, -3)
shape = SubResource("RectangleShape2D_fulsm")

[node name="Area2D" type="Area2D" parent="." unique_id=1288225278]
visible = false

[node name="attack_up" type="CollisionPolygon2D" parent="Area2D" unique_id=549227356]
scale = Vector2(1.0678008, 1)
polygon = PackedVector2Array(8.429528, -32.393898, -29, -29, -39, 7.000003, -13.570474, 7.606101, -2.5704777, -10.393898, 15.429527, -4.393902, 33.429535, -14.393899)
disabled = true

[node name="attack_left" type="CollisionPolygon2D" parent="Area2D" unique_id=1153385169]
scale = Vector2(1.0678008, 1)
polygon = PackedVector2Array(-15, -14, -26, -14, -36, -11, -44, -4, -44, 2, -40, 6, -27, 9, -12, 9, 0, 6)
disabled = true

[node name="attack_down" type="CollisionPolygon2D" parent="Area2D" unique_id=2117225812]
scale = Vector2(1.0678008, 1)
polygon = PackedVector2Array(-22, -13, -14, -8, -7, 9, 12, -13, 15, -13, 21, 1, 20, 12, 15, 19, 2, 24, -13, 24, -22, 21, -31, 11, -32, 3, -31, -3)
disabled = true

[node name="attack_right" type="CollisionPolygon2D" parent="Area2D" unique_id=87396062]
scale = Vector2(1.0678008, 1)
polygon = PackedVector2Array(-9, -21, -6, -15, 13, -10, -7, -9, -15, -5, -6, 2, 1, 4, 22, 4, 32, 1, 36, -3, 36, -9, 30, -16, 17, -20)
disabled = true

[node name="Camera2D" type="Camera2D" parent="." unique_id=1273543809]
zoom = Vector2(2, 2)

[node name="health_label" type="Label" parent="." unique_id=897288211]
offset_left = 204.0
offset_top = -156.0
offset_right = 244.0
offset_bottom = -133.0
text = "health:100"

[node name="score_label" type="Label" parent="." unique_id=710382842]
offset_left = 205.0
offset_top = -129.0
offset_right = 261.0
offset_bottom = -105.0
text = "score:0"

[connection signal="body_entered" from="hp" to="." method="_on_hp_body_entered"]
[connection signal="body_entered" from="Area2D" to="state_machine/attack" method="_on_area_2d_body_entered"]
